Fix tabs design in dark mode

--- a/app/assets/stylesheets/externals/antd-dark.less
+++ b/app/assets/stylesheets/externals/antd-dark.less
@@ -153,6 +153,7 @@
   }
 
   // Fix tabs design.
+  .ant-tabs-tab.ant-tabs-tab-active .ant-tabs-tab-btn,
   .ant-tabs.ant-tabs-card .ant-tabs-card-bar .ant-tabs-tab-active {
     background: transparent;
     border-color: var(--border-color);
